# Lung-Disease-Classification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LungDiseaseClassifiingAllModels.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
configs/: config.yaml  model_config.yaml  training_config.yaml
data/: README.md
output/: evaluation_results.txt
requirements/: base.txt  dev.txt
scripts/: evaluate.py  predict.py  train.py
src/: __init__.py  data.py  download_dataset.py  enhanced_model.py  evaluate.py  model.py  plot_results.py  predict.py  train_enhanced.py
src/evaluation/: metrics.py
src/models/: attention.py  base.py  efficientnet.py
src/training/: trainer.py
tests/: test_model.py
